2014-04-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_save_attr_stack):
	Add debug warning to clarify why some tests are currently failing.

2014-04-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse_length_pair_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	Support attributes made of two length values. fontSize='20px 20px'
	is now correctly parsed, even though the second value is ignored.

2014-04-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstyle.c: (gst_ttml_style_get_length_unit_name),
	(gst_ttml_style_gen_pango_markup):
	* src/gstttmlstyle.h:
	Turn the FontSize attribute into a more generic length, which will
	come in handy for region parsing. Length parsing was (and still is)
	incomplete.

2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_save_attr_stack),
	(gst_ttml_state_restore_attr_stack):
	Debug and comments.

2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_free), (gst_ttml_attribute_copy),
	(gst_ttml_attribute_type_name):
	* src/gstttmlenums.h:
	* src/gstttmlevent.c: (gst_ttml_event_free),
	(gst_ttml_event_new_attr_update), (gst_ttml_event_type_name):
	* src/gstttmlparse.c: (gst_ttmlparse_parse_event),
	(gst_ttmlparse_sax2_element_start_ns),
	(gst_ttmlparse_sax2_element_end_ns),
	(gst_ttmlparse_sax_document_start):
	* src/gstttmlparse.h:
	* src/gstttmlspan.c: (gst_ttml_span_compose):
	* src/gstttmlstate.c: (gst_ttml_state_reset),